--- a/CSS/Card-1.css
+++ b/CSS/Card-1.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Telegraf-Regular;
+  src: url(../FONTs/static/FiraCode-Regular.ttf);
+}
+
 html {
   font-size: 16px;
   font-family: sans-serif;
@@ -8,6 +13,7 @@ h1 {
   margin-left: auto;
   margin-right: auto;
   color: #f32;
+  font-family: Telegraf-Regular;
 }
 main {
   max-width: 95%;
@@ -36,8 +42,10 @@ main {
   font-size: 1.8rem;
   margin-bottom: 10px;
   letter-spacing: 0.1rem;
+  font-family: Telegraf-Regular;
 }
 .principal h3 {
+  font-family: Telegraf-Regular;
   color: #fff;
   font-size: 1.2rem;
   margin: 0;
@@ -69,6 +77,7 @@ main {
 .primero h2 {
   font-size: 1.2rem;
   text-align: center;
+  font-family: Telegraf-Regular;
 }
 .primero svg {
   width: 5rem;
