--- a/CSS/Card-4.css
+++ b/CSS/Card-4.css
@@ -24,8 +24,9 @@ h1 {
 main {
   max-width: 95%;
   height: 85vh;
-  background-image: url(../Recursos/Fondo\ Diseño.png);
+  background-image: url(../Recursos/Fondo\ 3\ PC-Gamer\ dif.png);
   background-size: cover;
+  background-position: bottom;
   background-repeat: no-repeat;
   margin-left: auto;
   margin-right: auto;
@@ -58,10 +59,11 @@ main {
   margin-bottom: 1rem;
 }
 .content {
-  background-image: url(../Recursos/FONDO\ DISEÑO\ DIF.png);
+  background-image: url(../Recursos/FONDO\ 3\ PC-GAMER.jpg);
   width: 100%;
   height: 50vh;
   background-size: cover;
+  background-position: bottom;
   background-repeat: no-repeat;
   width: 50%;
   height: 45vh;
